@@ -18,8 +18,15 @@ sub set {
   my ($self, $key, $value_ref) = @_;
   my $r = $self->redis_master;
   my $expire = $self->expiration_time;
+
   my $rv = $r->set($key, $$value_ref);
-  $r->expire($key, $expire) if $expire;
+
+  if (defined $expire) {
+    $r->pexpire(
+      $key, int(1000*($expire+rand($self->expiration_time_jitter)))
+    );
+  }
+
   return $rv;
 }
 
